// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnrolmentHandler assert should verify enrolment 1`] = `
Object {
  "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
  "certificateChallenge": "ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u",
  "created": 2021-01-01T08:00:00.000Z,
  "events": Array [],
  "expires": 2099-01-01T00:00:00.000Z,
  "id": "d43e9912-b565-47c6-acd3-9ecd477d46bc",
  "macAddress": "0025:96FF:FE12:3456",
  "name": "0025:96FF:FE12:3456",
  "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
  "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`EnrolmentHandler assert should verify enrolment 2`] = `
Object {
  "Enrolment::d43e9912-b565-47c6-acd3-9ecd477d46bc": Object {
    "blob": "{\\"json\\":{\\"id\\":\\"d43e9912-b565-47c6-acd3-9ecd477d46bc\\",\\"created\\":\\"2021-01-01T08:00:00.000Z\\",\\"events\\":[],\\"updated\\":\\"2021-01-01T08:00:00.000Z\\",\\"version\\":\\"0\\",\\"accountId\\":\\"51cc7c03-3f86-44ae-8be2-5fcf5536c08b\\",\\"certificateChallenge\\":\\"ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u\\",\\"expires\\":\\"2099-01-01T00:00:00.000Z\\",\\"macAddress\\":\\"0025:96FF:FE12:3456\\",\\"name\\":\\"0025:96FF:FE12:3456\\",\\"publicKey\\":\\"-----BEGIN RSA PUBLIC KEY-----\\\\nMIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy\\\\nrvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE\\\\ntWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=\\\\n-----END RSA PUBLIC KEY-----\\\\n\\",\\"uniqueId\\":\\"a097a56f506a4091b4c93a8bfb8cec0f\\"},\\"meta\\":{\\"id\\":\\"string\\",\\"created\\":\\"date\\",\\"events\\":[],\\"updated\\":\\"date\\",\\"version\\":\\"number\\",\\"accountId\\":\\"string\\",\\"certificateChallenge\\":\\"string\\",\\"expires\\":\\"date\\",\\"macAddress\\":\\"string\\",\\"name\\":\\"string\\",\\"publicKey\\":\\"string\\",\\"uniqueId\\":\\"string\\"}}",
    "expiresInSeconds": undefined,
  },
}
`;

exports[`EnrolmentHandler create should create an enrolment 1`] = `
Object {
  "accountId": "543afa16-ba6f-4f40-8882-30b4450cd59b",
  "certificateChallenge": "ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u",
  "created": 2021-01-01T08:00:00.000Z,
  "events": Array [],
  "expires": 2021-01-01T08:05:00.000Z,
  "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
  "macAddress": "00:00:0A:BB:28:FC",
  "name": "00:00:0A:BB:28:FC",
  "publicKey": "publicKey",
  "uniqueId": "472704d28e5c4187b841",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`EnrolmentHandler create should create an enrolment 2`] = `
Object {
  "Enrolment::bc54a8e9-3246-4cad-8244-0a1a42c914cd": Object {
    "blob": "{\\"json\\":{\\"id\\":\\"bc54a8e9-3246-4cad-8244-0a1a42c914cd\\",\\"created\\":\\"2021-01-01T08:00:00.000Z\\",\\"events\\":[],\\"updated\\":\\"2021-01-01T08:00:00.000Z\\",\\"version\\":\\"0\\",\\"accountId\\":\\"543afa16-ba6f-4f40-8882-30b4450cd59b\\",\\"certificateChallenge\\":\\"ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u\\",\\"expires\\":\\"2021-01-01T08:05:00.000Z\\",\\"macAddress\\":\\"00:00:0A:BB:28:FC\\",\\"name\\":\\"00:00:0A:BB:28:FC\\",\\"publicKey\\":\\"publicKey\\",\\"uniqueId\\":\\"472704d28e5c4187b841\\"},\\"meta\\":{\\"id\\":\\"string\\",\\"created\\":\\"date\\",\\"events\\":[],\\"updated\\":\\"date\\",\\"version\\":\\"number\\",\\"accountId\\":\\"string\\",\\"certificateChallenge\\":\\"string\\",\\"expires\\":\\"date\\",\\"macAddress\\":\\"string\\",\\"name\\":\\"string\\",\\"publicKey\\":\\"string\\",\\"uniqueId\\":\\"string\\"}}",
    "expiresInSeconds": undefined,
  },
  "Enrolment::d43e9912-b565-47c6-acd3-9ecd477d46bc": Object {
    "blob": "{\\"json\\":{\\"id\\":\\"d43e9912-b565-47c6-acd3-9ecd477d46bc\\",\\"created\\":\\"2021-01-01T08:00:00.000Z\\",\\"events\\":[],\\"updated\\":\\"2021-01-01T08:00:00.000Z\\",\\"version\\":\\"0\\",\\"accountId\\":\\"51cc7c03-3f86-44ae-8be2-5fcf5536c08b\\",\\"certificateChallenge\\":\\"ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u\\",\\"expires\\":\\"2099-01-01T00:00:00.000Z\\",\\"macAddress\\":\\"0025:96FF:FE12:3456\\",\\"name\\":\\"0025:96FF:FE12:3456\\",\\"publicKey\\":\\"-----BEGIN RSA PUBLIC KEY-----\\\\nMIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy\\\\nrvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE\\\\ntWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=\\\\n-----END RSA PUBLIC KEY-----\\\\n\\",\\"uniqueId\\":\\"a097a56f506a4091b4c93a8bfb8cec0f\\"},\\"meta\\":{\\"id\\":\\"string\\",\\"created\\":\\"date\\",\\"events\\":[],\\"updated\\":\\"date\\",\\"version\\":\\"number\\",\\"accountId\\":\\"string\\",\\"certificateChallenge\\":\\"string\\",\\"expires\\":\\"date\\",\\"macAddress\\":\\"string\\",\\"name\\":\\"string\\",\\"publicKey\\":\\"string\\",\\"uniqueId\\":\\"string\\"}}",
    "expiresInSeconds": undefined,
  },
}
`;

exports[`EnrolmentHandler createDevice should verify enrolment 1`] = `
Object {
  "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
  "created": 2021-01-01T08:00:00.000Z,
  "events": Array [
    Object {
      "date": 2021-01-01T08:00:00.000Z,
      "name": "device_created",
      "payload": Object {
        "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
        "created": 2021-01-01T08:00:00.000Z,
        "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
        "macAddress": "0025:96FF:FE12:3456",
        "name": "0025:96FF:FE12:3456",
        "pin": Object {
          "signature": "MTIzNDU2",
          "updated": 2021-01-01T08:00:00.000Z,
        },
        "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
        "recoveryKey": Object {
          "signature": "QUJDRC0xMjM0NTYtQUJDRC0xMjM0NTYtQUJDRA==",
          "updated": 2021-01-01T08:00:00.000Z,
        },
        "secret": Object {
          "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
          "updated": 2021-01-01T08:00:00.000Z,
        },
        "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
        "updated": 2021-01-01T08:00:00.000Z,
        "version": 0,
      },
    },
  ],
  "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
  "macAddress": "0025:96FF:FE12:3456",
  "name": "0025:96FF:FE12:3456",
  "pin": Object {
    "signature": "MTIzNDU2",
    "updated": 2021-01-01T08:00:00.000Z,
  },
  "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
  "recoveryKey": Object {
    "signature": "QUJDRC0xMjM0NTYtQUJDRC0xMjM0NTYtQUJDRA==",
    "updated": 2021-01-01T08:00:00.000Z,
  },
  "secret": Object {
    "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
    "updated": 2021-01-01T08:00:00.000Z,
  },
  "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`EnrolmentHandler createDevice should verify enrolment 2`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [
        Object {
          "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
          "created": 2021-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "device_created",
              "payload": Object {
                "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
                "created": 2021-01-01T08:00:00.000Z,
                "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
                "macAddress": "0025:96FF:FE12:3456",
                "name": "0025:96FF:FE12:3456",
                "pin": Object {
                  "signature": "MTIzNDU2",
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
                "recoveryKey": Object {
                  "signature": "QUJDRC0xMjM0NTYtQUJDRC0xMjM0NTYtQUJDRA==",
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "secret": Object {
                  "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
          ],
          "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
          "macAddress": "0025:96FF:FE12:3456",
          "name": "0025:96FF:FE12:3456",
          "pin": Object {
            "signature": "MTIzNDU2",
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
          "recoveryKey": Object {
            "signature": "QUJDRC0xMjM0NTYtQUJDRC0xMjM0NTYtQUJDRA==",
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "secret": Object {
            "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`EnrolmentHandler removeDevice should not try to remove device that does not exist 1`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`EnrolmentHandler removeDevice should not try to remove device when input is incorrect 1`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [
        Object {
          "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
          "created": 2021-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "device_created",
              "payload": Object {
                "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
                "created": 2021-01-01T08:00:00.000Z,
                "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
                "macAddress": "0025:96FF:FE12:3456",
                "name": "My iPhone 12",
                "pin": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
                "recoveryKey": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "secret": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
          ],
          "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
          "macAddress": "0025:96FF:FE12:3456",
          "name": "My iPhone 12",
          "pin": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
          "recoveryKey": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "secret": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`EnrolmentHandler removeDevice should remove existing device 1`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [
        Object {
          "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
          "created": 2021-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "device_created",
              "payload": Object {
                "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
                "created": 2021-01-01T08:00:00.000Z,
                "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
                "macAddress": "0025:96FF:FE12:3456",
                "name": "My iPhone 12",
                "pin": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
                "recoveryKey": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "secret": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
          ],
          "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
          "macAddress": "0025:96FF:FE12:3456",
          "name": "My iPhone 12",
          "pin": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
          "recoveryKey": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "secret": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
